# optic-graph

./: LICENSE  README.md  optic-graph.cabal  ord-graph.cabal
examples/: Example.hs  PathEmphasis.hs  Scc.hs
src/Data/Optic/: Graph.hs
src/Data/Optic/Directed/: Abstract.hs  Graph.hs  HyperGraph.hs
src/Data/Optic/Directed/HyperGraph/: Graph.hs
src/Data/Optic/Graph/: Accessors.hs  Ctxt.hs  EdgeFocused.hs  Graph.hs  Scc.hs  TraversalVariants.hs  Traversals.hs
src/Data/Optic/Graph/Internal/: Actions.hs
src/Data/Optic/Internal/: Graph.hs
src/Data/Optic/Undirected/: Graph.hs  Hypergraph.hs
src/Data/Ord/: Graph.hs
test/Data/Optic/: Graph.hs  GraphTest.hs
test/Data/Optic/Directed/: Graph.hs  HyperGraph.hs
test/Data/Optic/Internal/: GraphTest.hs
test/Data/Ord/: GraphTest.hs
