name:                optic-graph
version:             0.1.0.0
homepage:            https://github.com/DAHeath/ord-graph
license:             BSD3
license-file:        LICENSE
author:              David Heath
maintainer:          heath.davidanthony@gmail.com
copyright:           2017 David Heath
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Optic.Graph
  other-modules:       Data.Optic.Graph.Graph
                     , Data.Optic.Graph.Accessors
                     , Data.Optic.Graph.EdgeFocused
                     , Data.Optic.Graph.Ctxt
                     , Data.Optic.Graph.Traversals
                     , Data.Optic.Graph.TraversalVariants
                     , Data.Optic.Graph.Scc
                     , Data.Optic.Graph.Internal.Actions
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , monad-loops
                     , lens
                     , bifunctors
                     , QuickCheck
  default-language:    Haskell2010

test-suite ord-graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Data/Optic/GraphTest.hs
  build-depends:       base
                     , optic-graph
                     , hspec
                     , QuickCheck
                     , lens
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DAHeath/optic-graph
