name:                optic-graph
version:             0.1.0.0
homepage:            https://github.com/DAHeath/optic-graph
license:             BSD3
license-file:        LICENSE
author:              David Heath
maintainer:          heath.davidanthony@gmail.com
copyright:           2017 David Heath
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Optic.Directed.Graph
                     , Data.Optic.Directed.HyperGraph
                     , Data.Optic.Undirected.Graph
                     , Data.Optic.Undirected.HyperGraph
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , containers
                     , mtl
                     , bifunctors
                     , monad-loops
                     , QuickCheck
  default-language:    Haskell2010

test-suite optic-graph2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , optic-graph
                     , hspec
                     , QuickCheck
                     , lens
                     , mtl
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DAHeath/optic-graph
